--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,6 +7,9 @@ sql:
       go:
         package: "db"
         out: "db"
-        sql_package: "pgx/v4"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         json_tags_case_style: "snake"
+        overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
