--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,15 @@
-# fly.toml app configuration file generated for stelo-api on 2023-05-11T21:26:19-04:00
+# fly.toml app configuration file generated for stelo-api on 2023-07-02T20:21:34-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "stelo-api"
-kill_signal = "SIGINT"
-kill_timeout = 5
 primary_region = "iad"
-processes = []
+kill_signal = "SIGINT"
+kill_timeout = "5s"
+
+[experimental]
+  auto_rollback = true
 
 [build]
   builder = "paketobuildpacks/builder:base"
@@ -15,34 +17,33 @@ processes = []
 
 [env]
   PORT = "8080"
+  PRIMARY_REGION = "iad"
   PRODUCTION_ENV = "true"
 
-[experimental]
-  auto_rollback = true
-
 [[services]]
-  http_checks = []
-  internal_port = 8080
-  min_machines_running = 1
-  processes = ["app"]
   protocol = "tcp"
-  script_checks = []
+  internal_port = 8080
+  processes = ["app"]
+  auto_start_machines = true
+  auto_stop_machines = true
+  min_machines_running = 1
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+
   [services.concurrency]
+    type = "requests"
     hard_limit = 50
     soft_limit = 35
-    type = "requests"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 0
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 0
