--- a/fly.toml
+++ b/fly.toml
@@ -9,41 +9,40 @@ kill_signal = "SIGINT"
 kill_timeout = "5s"
 
 [experimental]
-  auto_rollback = true
+	auto_rollback = true
 
-[build]
-  builder = "paketobuildpacks/builder:base"
-  buildpacks = ["gcr.io/paketo-buildpacks/go"]
+[build.args]
+	GO_VERSION = "1.21.5"
 
 [env]
-  PORT = "8080"
-  PRIMARY_REGION = "iad"
-  PRODUCTION_ENV = "true"
+	PORT = "8080"
+	PRIMARY_REGION = "iad"
+	PRODUCTION_ENV = "true"
 
 [[services]]
-  protocol = "tcp"
-  internal_port = 8080
-  processes = ["app"]
-  auto_start_machines = true
-  auto_stop_machines = true
-  min_machines_running = 1
+	protocol = "tcp"
+	internal_port = 8080
+	processes = ["app"]
+	auto_start_machines = true
+	auto_stop_machines = true
+	min_machines_running = 1
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
+	[[services.ports]]
+		port = 80
+		handlers = ["http"]
+		force_https = true
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
+	[[services.ports]]
+		port = 443
+		handlers = ["tls", "http"]
 
-  [services.concurrency]
-    type = "requests"
-    hard_limit = 50
-    soft_limit = 35
+	[services.concurrency]
+		type = "requests"
+		hard_limit = 50
+		soft_limit = 35
 
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
-    restart_limit = 0
+	[[services.tcp_checks]]
+		interval = "15s"
+		timeout = "2s"
+		grace_period = "1s"
+		restart_limit = 0
